--- a/src/Teyvat/localisation/english/loading_tips_l_english.yml
+++ b/src/Teyvat/localisation/english/loading_tips_l_english.yml
@@ -1,92 +1,92 @@
 ﻿l_english:
- LOADING_TIP_0:0 "It is humiliating to remain with our hands folded while others write history. It matters little who wins.\n- Benito Mussolini"
- LOADING_TIP_1:0 "To make a people great it is necessary to send them to battle even if you have to kick them in the pants. That is what I shall do.\n- Benito Mussolini"
- LOADING_TIP_2:0 "Every soldier must know, before he goes into battle, how the little battle he is to fight fits into the larger picture.\n- Bernard L. Montgomery"
- LOADING_TIP_3:0 "If we lose the war in the air we lose the war and we lose it quickly.\n- Bernard L. Montgomery"
- LOADING_TIP_4:0 "It's good to trust others, but, not to do so is much better.\n- Benito Mussolini"
- LOADING_TIP_5:0 "From a philosophical and doctrinal viewpoint, I do not believe in perpetual peace.\n- Benito Mussolini"
- LOADING_TIP_6:0 "Giraffes are heartless creatures"
- LOADING_TIP_7:0 "As long as there are sovereign nations possessing great power, war is inevitable.\n- Albert Einstein"
- LOADING_TIP_8:0 "Those who vote decide nothing. Those who count the vote decide everything.\n- Joseph Stalin"
- LOADING_TIP_9:0 "History shows that there are no invincible armies and that there never have been.\n- Joseph Stalin"
- LOADING_TIP_10:0 "The Pope! How many divisions has he got?\n- Joseph Stalin"
- LOADING_TIP_11:0 "Gaiety is the most outstanding feature of the Soviet Union.\n- Joseph Stalin"
- LOADING_TIP_12:0 "The only real power comes out of a long rifle.\n- Joseph Stalin"
- LOADING_TIP_13:0 "Any alliance whose purpose is not the intention to wage war is senseless and useless.\n- Adolf Hitler"
- LOADING_TIP_14:0 "Great liars are also great magicians.\n- Adolf Hitler"
- LOADING_TIP_15:0 "If today I stand here as a revolutionary, it is as a revolutionary against the Revolution.\n- Adolf Hitler"
- LOADING_TIP_16:0 "If you tell a big enough lie and tell it frequently enough, it will be believed.\n- Adolf Hitler"
- LOADING_TIP_17:0 "Germany will either be a world power or will not be at all.\n- Adolf Hitler"
- LOADING_TIP_18:0 "Success consists of going from failure to failure without loss of enthusiasm.\n- Winston Churchill"
- LOADING_TIP_19:0 "If you're going through hell, keep going.\n- Winston Churchill"
- LOADING_TIP_20:0 "The best argument against democracy is a five-minute conversation with the average voter.\n- Winston Churchill"
- LOADING_TIP_21:0 "Whenever in future wars the battle is fought, panzer troops will play the decisive role.\n- Heinz Guderian"
- LOADING_TIP_22:0 "The new German Panther and Tiger can be used until they break down without trying to repair them. They have bad engines, transmission and suspension.\n- Department of Weaponry of the Red Army"
- LOADING_TIP_23:0 "No bastard ever won a war by dying for his country. He won it by making the other poor dumb bastard die for his country.\n- George S. Patton"
- LOADING_TIP_24:0 "A good plan violently executed now is better than a perfect plan executed next week.\n- George S. Patton"
- LOADING_TIP_25:0 "Lead me, follow me, or get out of my way.\n- George S. Patton"
- LOADING_TIP_26:0 "Nobody ever defended anything successfully, there is only attack and attack and attack some more.\n- George S. Patton"
- LOADING_TIP_27:0 "Wars may be fought with weapons, but they are won by men. It is the spirit of men who follow and of the man who leads that gains the victory.\n- George S. Patton"
- LOADING_TIP_28:0 "The first time I ever saw a jet, I shot it down.\n- Chuck Yeager, USAAF"
- LOADING_TIP_29:0 "Theo, Heinrich here. Have just shot down two bombers. No more ammunition. I'm going to ram. Auf Wiedersehen, see you in Valhalla!\n- Heinrich Ehrler, Luftwaffe"
- LOADING_TIP_30:0 "Leadership consists of picking good men and helping them do their best.\n- Chester W. Nimitz"
- LOADING_TIP_31:0 "Is the proposed operation likely to succeed? Is it in the realm of practicability in terms of material and supplies?\n- Chester W. Nimitz"
- LOADING_TIP_32:0 "In preparing for battle I have always found that plans are useless, but planning is indispensable.\n- Dwight D. Eisenhower"
- LOADING_TIP_33:0 "What counts is not necessarily the size of the dog in the fight - it's the size of the fight in the dog.\n- Dwight D. Eisenhower"
- LOADING_TIP_34:0 "It goes without saying that when survival is threatened, struggles erupt between peoples, and unfortunate wars between nations result.\n- Hideki Tojo"
- LOADING_TIP_35:0 "In a man-to-man fight, the winner is he who has one more round in his magazine.\n- Erwin Rommel"
- LOADING_TIP_36:0 "I would rather be the hammer than the anvil.\n- Erwin Rommel"
- LOADING_TIP_37:0 "Sweat saves blood, blood saves lives, but brains saves both.\n- Erwin Rommel"
- LOADING_TIP_38:0 "Poor Neville Chamberlain believed he could trust Hitler. He was wrong. But I don't think I'm wrong about Stalin.\n- Winston Churchill (after Yalta)"
- LOADING_TIP_39:0 "I believe it is peace for our time.\n- Neville Chamberlain, 1938 after Munich agreement."
- LOADING_TIP_40:0 "No enemy bomber can reach the Ruhr. If one reaches the Ruhr, my name is not Göring. You may call me Meyer.\n- Hermann Meyer"
- LOADING_TIP_41:0 "We have only to kick in the door and the whole rotten structure will come crashing down.\n- Adolf Hitler (on the Soviet Union)"
- LOADING_TIP_42:0 "I can run wild for the first six to twelve months of a war with the United States and the United Kingdom. After that, I have no expectation of success.\n- Isoroku Yamamoto"
- LOADING_TIP_43:0 "If we come to a minefield, our infantry attacks exactly as if it were not there.\n- Georgy Zhukov"
- LOADING_TIP_44:0 "The Russian colossus has been underestimated by us... whenever a dozen divisions are destroyed, the Russians replace them with another dozen.\n- Franz Halder"
- LOADING_TIP_45:0 "To the German Commander: NUTS!\nThe American Commander.\n- Anthony C. McAuliffe (responding to German demand for surrender)"
- LOADING_TIP_46:0 "It is us today. It will be you tomorrow.\n- Haile Selassie I, 1936"
- LOADING_TIP_47:0 "Not one step back!\n- Soviet Order No. 227"
- LOADING_TIP_48:0 "Tora! Tora! Tora!\n- Mitsuo Fuchida, 7 December, 1941"
- LOADING_TIP_49:0 "Your name is unknown. Your deed is immortal.\n- Tomb of the Unknown Soldier (Moscow)"
- LOADING_TIP_50:0 "Where is, repeat, where is Task Force Thirty-Four? The world wonders.\n- CINCPAC, Battle of Leyte Gulf"
- LOADING_TIP_51:0 "The war situation has developed not necessarily to Japan's advantage.\n- Emperor Hirohito, 1945"
- LOADING_TIP_52:0 "We should have known better after the first war.\n- Gerd von Rundstedt"
- LOADING_TIP_53:0 "The vastness of Russia devours us.\n- Gerd von Rundstedt"
- LOADING_TIP_54:0 "I ask you, do you want total war? If necessary, do you want a war more total and radical than anything that we can even yet imagine?\n- Joseph Goebbels"
- LOADING_TIP_55:0 "One blow from the German army and another from the Soviet army put an end to this ugly product of Versailles.\n- Vyacheslav Molotov (after the fall of Poland)"
- LOADING_TIP_56:0 "Scratch one flattop! Dixon to carrier: scratch one flattop!\n- Robert E. Dixon, Battle of the Coral Sea"
- LOADING_TIP_57:0 "Isn't it dreadful? Here we are, two officers of the German General Staff, discussing how best to murder our commander in chief.\n- Henning von Tresckow"
- LOADING_TIP_58:0 "Hitler is a dancing dervish. He must be shot down.\n- Henning von Tresckow"
- LOADING_TIP_59:0 "The Nazis entered this war under the rather childish delusion that they were going to bomb everyone else, and nobody was going to bomb them.\n- Arthur 'Bomber' Harris"
- LOADING_TIP_60:0 "If Hitler invaded Hell, I would make at least a favorable reference to the devil in the House of Commons.\n- Winston Churchill, 21 June, 1941"
- LOADING_TIP_61:0 "So the bastard's dead? Too bad we didn't capture him alive!\n- Joseph Stalin (on hearing of Hitler's suicide)"
- LOADING_TIP_62:0 "We have been defeated. We are beaten, we have lost the battle.\n- Paul Reynaud, 15 May, 1940"
- LOADING_TIP_63:0 "I only need a few thousand dead so that I can sit at the peace conference as a man who has fought.\n- Benito Mussolini"
- LOADING_TIP_64:0 "The French had lied to the Poles in saying they are going to attack. There is no idea of it.\n- Edmund Ironside"
- LOADING_TIP_65:0 "Why Die for Danzig?\n- French Anti-War Slogan, 1939"
- LOADING_TIP_66:0 "There is something phoney about this war.\n- US Senator William Borah, 1939"
- LOADING_TIP_67:0 "Switzerland possesses the most disgusting and miserable people and political system. The Swiss are the mortal enemies of the new Germany.\n- Adolf Hitler"
- LOADING_TIP_68:0 "The fruits of victory are tumbling into our mouths too quickly.\n- Emperor Hirohito"
- LOADING_TIP_69:0 "You will all wind up shining the shoes of the Germans!\n- Italo Balbo"
- LOADING_TIP_70:0 "Sink, burn, capture, destroy. Let nothing pass.\n- Andrew Cunningham, Battle of Tunisia"
- LOADING_TIP_71:0 "I think we may be going a bridge too far.\n- Frederick Browning (prior to Operation Market Garden)"
- LOADING_TIP_72:0 "Thank God for the French Army.\n- Winston Churchill, 1933"
- LOADING_TIP_73:0 "When you see a rattlesnake poised to strike, you do not wait until he has struck to crush him.\n- Franklin D. Roosevelt"
- LOADING_TIP_74:0 "Rules are not necessarily sacred, principles are.\n- Franklin D. Roosevelt"
- LOADING_TIP_75:0 "People who are hungry and out of a job are the stuff of which dictatorships are made.\n- Franklin D. Roosevelt"
- LOADING_TIP_76:0 "A man has to be alert all the time if he expects to keep on breathing. If not, some German son-of-a-bitch will sneak up behind him and beat him to death with a sock full of shit.\n- George S. Patton"
- LOADING_TIP_77:0 "Fortifications, artillery, foreign aid - will be of no value, unless the ordinary soldier knows that it is HE guarding his country.\n- Carl Gustaf Emil Mannerheim"
- LOADING_TIP_78:0 "Through the mud and the blood to the green fields beyond.\n- Royal Canadian Armoured Corps motto"
- LOADING_TIP_79:0 "There is general curiosity in the British Fleet to find out whether the Italians are up to the level they were at in the last war or whether they have fallen off at all.\n- Winston Churchill (on the Italian declaration of war)"
- LOADING_TIP_80:0 "And we'll fight them with the butt ends of broken beer bottles because that's bloody well all we've got!\n - Winston Churchill (immediately after promising to fight in the fields and in the streets)"
- LOADING_TIP_81:0 "Experience has shown that attacks against tanks with close combat weapons by a sufficiently determined man will basically always succeed\n - German Army Group Center anti-tank manual"
- LOADING_TIP_82:0 "Give me fifty DC-3s and the Japanese can have the Burma Road.\n - Chiang Kai-Shek"
- LOADING_TIP_83:0 "Politics is war without bloodshed, while war is politics with bloodshed.\n - Mao Zedong"
- LOADING_TIP_84:0 "Keep men, lose land: land can be taken again. Keep land, lose men: land and men are both lost.\n - Mao Zedong"
- LOADING_TIP_85:0 "I would rather die in a swamp of Greater Romania than in a paradise of a small Romania.\n - Ion Antonescu"
- LOADING_TIP_86:0 "People don't matter, only what they represent.\n - Ion Antonescu"
- LOADING_TIP_87:0 "In wartime, truth is so precious that she should always be attended by a bodyguard of lies.\n - Winston Churchill"
- LOADING_TIP_88:0 "Vanquished today by mechanical force, in the future we will be able to overcome by a superior mechanical force. The fate of the world depends on it.\n - Charles de Gaulle"
- LOADING_TIP_89:0 "The long sobs of violins of autumn. Soothe my heart with a monotone languor.\n - SOE coded transmission to French resistance"
- LOADING_TIP_90:0 "A State like Switzerland, which is nothing but a pimple on the face of Europe, cannot be allowed to continue.\n- Adolf Hitler"
+ LOADING_TIP_0:0 "「神之眼」？不过就是个实验用的工具罢了，和烧杯、坩埚没什么不同。唯一让我感兴趣的、就是它的原理···我总有一天会研究明白的，这只是时间问题。\n- 阿贝多"
+ LOADING_TIP_1:0 "「世界的真相」究竟是什么呢？\n- 阿贝多"
+ LOADING_TIP_2:0 "「白垩」，即是变化的开始。抽离了杂质，准备好接受一切知识，要和我一起去探索世界吗？\n- 阿贝多"
+ LOADING_TIP_3:0 "嗯…要是风大点就好了。\n- 安柏"
+ LOADING_TIP_4:0 "侦察骑士登场！\n- 安柏"
+ LOADING_TIP_5:0 "我因为爷爷才加入骑士团，又因为琴留在了团里。现在，是你陪我见到了蒙德以外的天空。我真的很开心。\n- 安柏"
+ LOADING_TIP_6:0 "「指引我前进的风啊。在我困顿时给我继续前行的力量，在我迷惑时给我辨明善恶的智慧。在我遭受不义时，给我抗争的勇气...」哎呀，抱歉，刚才在专注着祈祷。有什么事吗？\n- 芭芭拉"
+ LOADING_TIP_7:0 "同伴们一直在受伤…我，没有替大家分担痛苦的力量。但我可以尽最大的努力治疗！一定，要让大家恢复健康。\n- 芭芭拉"
+ LOADING_TIP_8:0 "每个人都会有自己的愿望。汇聚大家的愿望，让大家感到幸福——这一定，就是神给予我的使命吧。\n- 芭芭拉"
+ LOADING_TIP_9:0 "没想到我这么倒霉的人也可以获得神的认可，既然神都没有放弃我，我又怎么能放弃我自己呢？\n- 班尼特"
+ LOADING_TIP_10:0 "不知不觉，我们已经搭档很长时间了。其实我有一个梦想，等到蒙德城的冒险家协会发展成七国里最壮大的协会，我就要去周游提瓦特大陆！「班尼冒险团」会变成最伟大的冒险团，而我们，就是最伟大的两位冒险家！…你问你什么时候加入的？哎呀，这种细节不用在意嘛。\n- 班尼特"
+ LOADING_TIP_11:0 "有大家在身边，伤口就不会痛！\n- 班尼特"
+ LOADING_TIP_12:0 "问我帮助平民的用意？哈，哪有什么用意不用意的。谁的人生还没有个低谷。我的帮助是小事，但对他们而言，迈不迈得过去那道坎，可能就是两条路啊。\n- 北斗"
+ LOADING_TIP_13:0 "想要踏上我的「死兆星」号，得先回答我一个的问题。大海之中充满凶险，告诉我——你为什么想上我的船。\n- 北斗"
+ LOADING_TIP_14:0 "遇到难题了吗？不知道如何向前的话，总之先迈出第一步，后面的道路就会自然而然地展开了。\n- 北斗"
+ LOADING_TIP_15:0 "身为战士，要时刻把挑战之心系于刀尖之上。但无论胜败，都是无可替代的珍贵经历。\n- 达达利亚"
+ LOADING_TIP_16:0 "在无尽的雪原里，生命随时都会被碎骨一般的纯白天地吞噬，连足迹也无法留下。为此，我们每日都在与看不见的敌人战斗。\n- 达达利亚"
+ LOADING_TIP_17:0 "耳朵和尾巴才不是什么装饰，是「凯茨莱茵家族」血统的象征，真是少见多怪。呃…你、你把手伸过来干什么?这个...唔…好吧，耳朵的话可以让你摸一下...但是尾巴、尾巴绝对不可以!\n- 迪奥娜"
+ LOADING_TIP_18:0 "别再惹我了啊，我宽容大度，但也不好欺负！我警告你，我生起气来可是会咬人的！喵！虽然不一定舍得咬你···\n- 迪奥娜"
+ LOADING_TIP_19:0 "嗯…到底怎样才能调出难喝的酒呢...连我给予厚望的噩梦搭配一一「酱油牛奶绝云椒椒配蒲公英籽特调」都被说成是「小迪奥娜又有进步了」，呜…我不会认输的...\n- 迪奥娜"
+ LOADING_TIP_20:0 "只要坚信自己的道路，就无所谓天气是晴是雨。\n- 迪卢克"
+ LOADING_TIP_21:0 "我原以为——要扫荡罪恶的话，我必须独自行走在长夜之中。但你的坚持让我意识到，我又一次错了。「同伴」，我向你致以感谢。\n- 迪卢克"
+ LOADING_TIP_22:0 "我的左眼？我的左眼是透彻世间一切真相的「断罪之眼」。至于为何要遮起来…那么，窥见此间与彼方一切真实的负担与痛，你愿意承受吗？再说了，通晓此世与常世一切妄念与谎言，又是何等无趣的事，哼哼。\n- 菲谢尔"
+ LOADING_TIP_23:0 "皇女应断之罪为何，那当然是「违逆命运」了…毕竟，正是命运，让你…是命运，令你我降临此世，将因果交织相连。我、我会守护你，只、只因这是命运的默示录中昭告之事！\n- 菲谢尔"
+ LOADING_TIP_24:0 "来到这个世界而失去的力量，似乎已经恢复了大半。哼哼哼，定罪之时即将…啊啊，不必担心。即使到了终末之刻，我在此世降下罪罚之雷时，也不会伤及你。因为，你可是我的祝圣之人啊。\n- 菲谢尔"
+ LOADING_TIP_25:0 "枫原家其实也是有名的武士门第，可惜传承到我这里时，除了贵族的名号外已经别无长物。不过对我来说倒也足够了，武士不需要富足的生活，我们需要的是诗歌、美酒与手中的刀。\n- 枫原万叶"
+ LOADING_TIP_26:0 "在我看来，神之眼是力量的「证明」，而不是力量的「来源」。神之眼象征的是凡人继续向前的愿望，而我们武士的底气，一直都是手里的刀。\n- 枫原万叶"
+ LOADING_TIP_27:0 "「深山踏红叶，耳畔闻鹿鸣」...我很喜欢枫叶，可惜枫叶红时总多离别。\n- 枫原万叶"
+ LOADING_TIP_28:0 "只有保持心、弓、箭三位一体， 才能命中正鹄。\n- 九条裟罗"
+ LOADING_TIP_29:0 "力量已经融入我体内，随时听命。\n- 九条裟罗"
+ LOADING_TIP_30:0 "前面的区域，以后再来探索吧。\n- 派蒙"
+ LOADING_TIP_31:0 "真是和平啊，可又能持续多久呢？\n- 凯亚"
+ LOADING_TIP_32:0 "坎瑞亚？哦~你知道的真多。坎瑞亚的荣耀早已不在，剩下的如今都已沦为罪人，又何必再提起他们。\n- 凯亚"
+ LOADING_TIP_33:0 "蹦蹦炸弹！\n- 可莉"
+ LOADING_TIP_34:0 "全—都可以炸完！\n- 可莉"
+ LOADING_TIP_35:0 "哒哒哒~\n- 可莉"
+ LOADING_TIP_36:0 "在你看来，支撑璃月走过千年，最重要的东西是什么？…帝君？…我不这么觉得，因为必须依靠努力才能生存下去的，终究是我们人类啊。高高在上的他却要介入一切。哼，说句不好听的，他真的什么都懂吗？\n- 刻晴"
+ LOADING_TIP_37:0 "能和你一路结伴而行，我感觉受益匪浅。如果真的有一天，我抵达了理想中的终点…我的身边，还会有你陪伴吗？\n- 刻晴"
+ LOADING_TIP_38:0 "剑光如我，斩尽芜杂！\n- 刻晴"
+ LOADING_TIP_39:0 "浮世景色百千年依旧，人之在世却如白露与泡影。虚无。\n- 雷电将军"
+ LOADING_TIP_40:0 "谁？\n- 雷电将军"
+ LOADING_TIP_41:0 "恐惧是因为我在五百年前目睹了她的消亡和「那个事物」。但，如果.. 如果是你的话，一定可以拯救所有人的。如果是你的话，一定会拯救世界的。 就像是我记得稻妻的一切一样，只要你记得我，我就能永远地活着。\n- 雷电将军"
+ LOADING_TIP_42:0 "嗷！\n- 雷泽"
+ LOADING_TIP_43:0 "Blitz！\n- 雷泽"
+ LOADING_TIP_44:0 "嚎——\n- 雷泽"
+ LOADING_TIP_45:0 "随风而去吧。\n- 旅行者"
+ LOADING_TIP_46:0 "世界…拒绝了我？\n- 旅行者"
+ LOADING_TIP_47:0 "世界，充满未解之谜…\n- 旅行者"
+ LOADING_TIP_48:0 "占卜就是把既定的命运准确地展示出来。过度的修饰，只会让人们产生误解。\n- 莫娜"
+ LOADING_TIP_49:0 "虚假之天，星空下的命运早已注定。\n- 莫娜"
+ LOADING_TIP_50:0 "水中之影，涟漪中窥见启明星升起。\n- 莫娜"
+ LOADING_TIP_51:0 "赌徒永远会把希望寄托在下一颗骰子上…但最后赚钱的，当然是从来不碰骰子的庄家。\n- 凝光"
+ LOADING_TIP_52:0 "大不了，我可以再砸一个群玉阁。\n- 凝光"
+ LOADING_TIP_53:0 "「武斗」缺乏风度，只能作为下策中的下策。\n- 凝光"
+ LOADING_TIP_54:0 "只要你需要我，我随时都会出现在你的身边。\n- 诺艾尔"
+ LOADING_TIP_55:0 "说实话，有些失望…虽然这「神之眼」象征神明对我的肯定，但为什么不是「风」，而是与风的性质相差最远的「岩」呢？我觉得最适合西风骑士团的元素，毕竟还是…\n- 诺艾尔"
+ LOADING_TIP_56:0 "这就是…新的力量？谢谢你，这样我就能帮到更多人了。\n- 诺艾尔"
+ LOADING_TIP_57:0 "「生物炼金」，比起「创造」，更注重「改造」，找到生物隐藏起来的优点，然后放大，结合，结果往往都让人大吃一惊。嗯-生命真的是太神奇了，究竟还有多少我们不知道的东西呢？\n- 砂糖"
+ LOADING_TIP_58:0 "研究的本质，是寻找答案的过程。这个过程有时候很繁琐，也很累，但每次只要看看积累起来的成果，就会觉得…嗯，我是真的很喜欢做这样的事。\n- 砂糖"
+ LOADING_TIP_59:0 "放肆！哪个女人？\n- 留云借风真君"
+ LOADING_TIP_60:0 "刀剑抱业，名工怀宝。\n- 神里绫华"
+ LOADING_TIP_61:0 "「雪霁银妆素，桔高映琼枝。」嗯…美景当前，只差一壶茶与之相衬呢。\n- 神里绫华"
+ LOADING_TIP_62:0 "神里流…霜灭！\n- 神里绫华"
+ LOADING_TIP_63:0 "别想逃开喔？\n- 温迪"
+ LOADING_TIP_64:0 "飞，比跑快吧？\n- 温迪"
+ LOADING_TIP_65:0 "诶嘿。\n- 温迪"
+ LOADING_TIP_66:0 "无聊。\n- 魈"
+ LOADING_TIP_67:0 "无用。\n- 魈"
+ LOADING_TIP_68:0 "无能。\n- 魈"
+ LOADING_TIP_69:0 "有时明月无人夜，独向昭潭制恶龙。\n- 行秋"
+ LOADING_TIP_70:0 "衣裓贮文章，自言学雕虫。\n- 行秋"
+ LOADING_TIP_71:0 "「请从绝处，读我侠义。」\n- 行秋"
+ LOADING_TIP_72:0 "「不期修古，不法常可」，这句话是我必须牢记的教诲。\n- 烟绯"
+ LOADING_TIP_73:0 "唯有遵循应守之「律」，人才能获得解开一切问题的「法」。\n- 烟绯"
+ LOADING_TIP_74:0 "磨砺自身，修炼方术，都是本能使然，想要保全自己而已。我没有兼济苍生的胸怀，惩奸除恶只是顺手，不必感谢我。\n- 申鹤"
+ LOADING_TIP_75:0 "受我恩惠的人叫我仙人，被我惩罚的人喊我魔女，呵…不管是仙是魔，终究都是跟凡人不同的异类罢了…\n- 申鹤"
+ LOADING_TIP_76:0 "似乎...有一股火焰在我心中燃烧。\n- 托马"
+ LOADING_TIP_77:0 "拥有了强大的力量，要用来做什么呢？嗯...得好好考虑考虑了啊。\n- 托马"
+ LOADING_TIP_78:0 "金鱼来啦！\n- 宵宫"
+ LOADING_TIP_79:0 "烟花来喽！\n- 宵宫"
+ LOADING_TIP_80:0 "我偶尔也想脱下戏服，远游海外，去更大的世界看看。为了实现这个心愿，得更加努力才行。\n- 云堇"
+ LOADING_TIP_81:0 "俗语说：「业精于勤而荒于嬉。」\n- 云堇"
+ LOADING_TIP_82:0 "枪术千变万化，奥妙无比，让我庆幸的是，练枪时一直有你相伴。我已经领悟到其中旨要。往后切磋时，你可得小心了。\n- 云堇"
+ LOADING_TIP_83:0 "俱收并蓄。\n- 钟离"
+ LOADING_TIP_84:0 "天动万象。\n- 钟离"
+ LOADING_TIP_85:0 "剑印染冰！\n- 重云"
+ LOADING_TIP_86:0 "听我法旨。\n- 重云"
+ LOADING_TIP_87:0 "宝印幻剑！\n- 重云"
+ LOADING_TIP_88:0 "真名，度厄真君。\n- 七七"
+ LOADING_TIP_89:0 "咦，刚刚···我想说什么来着···\n- 七七"
+ LOADING_TIP_90:0 "七二三四，七二三四···五六七七，五六七七···\n- 七七"
